Update 'go-cboqrvzo' component image to: quay.io/rhtap_qe/go-cboqrvzo:3a4bf9dfda3c373c5dd113c5aea2ee9c348cdc7e@sha256:f889107ab069a31d9dd33fd16934876fed1e383a04d98b57083d3c94ccc6f3fc

--- a/components/go-cboqrvzo/overlays/development/deployment-patch.yaml
+++ b/components/go-cboqrvzo/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-cboqrvzo
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-cboqrvzo:3a4bf9dfda3c373c5dd113c5aea2ee9c348cdc7e@sha256:f889107ab069a31d9dd33fd16934876fed1e383a04d98b57083d3c94ccc6f3fc
+          name: container-image
